# DeSyDe

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  Makefile  Susan.gv  config.cfg  readme.md  sobel.gv  tutorial.md
docs/: Sobel.dot  Susan.dot  tutorial.md
examples/DATE18/: log.txt  old_WCETs.xml  run_experiments.sh
examples/RAPIDO17/: README.txt  log.txt  run_experiments.sh
examples/SDF_test/: d_jpegEnc1.sdf.xml  desConst.csv  procData.csv  wcet.csv
examples/ScalAnalysis/: generator.py  processer.py  runner.py
examples/TDNconfig/: log.txt  run_experiments.sh
examples/TODAES/: WCETs.xml  WCETsTODAES_tradeoff.xml  fix_experiments.sh  log.txt  run_experiments.sh
examples/demo_example/: WCETs.xml  desConst.xml  platform.xml  taskset.xml
examples/demo_example2/: WCETs.xml  desConst.xml  taskset.xml
examples/jas_dse_example/: WCETs.xml  desConst.xml  platform.xml
examples/multiModelExample/: WCETs.xml  _procData.csv  desConst.csv  desConst.xml  jpeg.xml  mp3.xml  platform.xml  susan.xml  (+3 more)
src/: CMakeLists.txt  Makefile  adse.cpp  dox  module.mk
src/applications/: Doxyfile  Makefile  applications.cpp  applications.hpp  flexperiodictasks.cpp  flexperiodictasks.hpp  module.mk  pr_task.cpp  pr_task.hpp  pr_taskset.cpp  pr_taskset.hpp  sdfgraph.cpp  sdfgraph.hpp
src/cp_model/: costMetrics.constraints  ipt_scheduling.constraints  mapping.constraints  memory.constraints  model.cpp  model.hpp  module.mk  partitioning.constraints  power.constraints  presolve.constraints  schedulability.cpp  schedulability.hpp  scheduling.constraints  sdf_pr_online_model.cpp  sdf_pr_online_model.hpp  taskPartitioningModel.cpp  taskPartitioningModel.hpp  throughput.constraints  wcct.constraints
src/exceptions/: exception.cpp  exception.h  ioexception.cpp  ioexception.h  modelexception.cpp  modelexception.h  module.mk  runtimeexception.cpp  runtimeexception.h
src/execution/: execution.cpp  module.mk
src/logger/: logger.cpp  logger.hpp  module.mk
src/modelExecution/: model_exec.cpp  module.mk
src/platform/: module.mk  platform.cpp  platform.hpp
src/presolving/: module.mk  oneProcMappings.cpp  oneProcMappings.hpp  presolver.cpp
src/settings/: config.cpp  config.hpp  dse_settings.cpp  dse_settings.hpp  input_reader.cpp  input_reader.hpp  module.mk  settings.cfg
src/system/: mapping.cpp  mapping.hpp  module.mk
src/systemDesign/: designConstraints.hpp  designDecisions.hpp  module.mk
src/throughput/: module.mk  throughputMCM.cpp  throughputMCR.cpp  throughputMCR.hpp  throughputSSE.cpp  throughputSSE.hpp
src/tools/: containertools.hpp  module.mk  solvers.cpp  solvers.hpp  stringtools.cpp  stringtools.hpp  systools.cpp  systools.hpp  tools.hpp
src/validation/: module.mk  validation.cpp  validation.hpp
src/xml/: module.mk  xmldoc.cpp  xmldoc.hpp
(+203 files in other folders)
